--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.17.2",
     "crypto": "^0.0.3",
     "express": "^4.15.3",
+    "express-validation": "^1.0.2",
     "http": "^0.0.0",
+    "http-status": "^1.0.1",
     "joi": "^13.0.2",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
