--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "compression": "^1.7.1",
+    "cors": "^2.8.4",
     "crypto": "^0.0.3",
     "express": "^4.15.3",
     "express-validation": "^1.0.2",
+    "helmet": "^3.9.0",
     "http": "^0.0.0",
     "http-status": "^1.0.1",
     "joi": "^13.0.2",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "method-override": "^2.3.10",
     "mongoose": "^4.13.6",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
