--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run serve:example",
-    "serve:dev": "NODE_ENV=development nodemon ./src/hogwarts.js --watch",
-    "serve:example": "NODE_ENV=development nodemon ./example/index.js --watch",
+    "serve:dev": "NODE_ENV=development nodemon ./src/hogwarts.js --watch src --watch example",
+    "serve:example": "NODE_ENV=development nodemon ./example/index.js --watch src --watch example",
     "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
