--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "karrot",
+  "name": "hogwarts",
   "version": "1.0.0",
   "description": "A simple API generator",
   "main": "index.js",
@@ -33,7 +33,8 @@
     "mongoose": "^4.13.6",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport-jwt": "^2.2.1",
+    "simpl-schema": "^1.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
